Update: Added latitude and longitude fields for storing the Driver's location and also storing the From Location of a trip. Modify the trip booking, fare estimation apis to find the nearby drivers along with other filters. Added logic in the update trip status, complete trip to allow only the associated driver to update or complete a trip and in the rate trip api to allow only the associated customer to rate. Fix: Changed the method in the send verification email and verify email to find the user using the email address which was previously done by username.